# FastAudioMerge

./: .gitignore  main.py  pyproject.toml
src/: application.py  thread_merge.py
